--- a/src/app/community/community.component.html
+++ b/src/app/community/community.component.html
@@ -1,1 +1,6 @@
-<p style="text-align: center; padding: 50px;">community coming soon</p>
+<div class="bg">
+    <div class="wrapper">
+        <h1>coming soon<span class="dot">.</span></h1>
+        <p>We are launching soon.</p>
+    </div>
+</div>
